# coffee_order_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  create_fastapi_app.py  main.py
app/alembic/versions/: 2025_02_16_0117-50c0fb3d876c_create_users_table.py  2025_02_16_0313-8870c87e1944_create_categories_table.py  2025_02_16_1429-d7910da497fd_create_products_table.py  2025_02_17_2309-589c8197911f_create_cart_table.py  2025_02_19_2057-95b72acda360_create_orders_table.py  2025_02_19_2350-5e1d761a726c_create_static_info_table.py  2025_02_20_0241-40c1bbda9b23_create_chat_and_message_tables.py
app/api/v1/: __init__.py  auth.py  carts.py  categories.py  chats.py  messages.py  orders.py  products.py  static_info.py  users.py
app/auth/: dependencies.py  utils.py  validations.py
app/core/: config.py  scheduler.py  taskiq_broker.py
app/core/models/: __init__.py  base.py  cart.py  category.py  chat.py  db_helper.py  enum.py  message.py  order.py  product.py  static_info.py  user.py
app/core/schemas/: __init__.py  auth.py  cart.py  category.py  chat.py  message.py  order.py  product.py  static_info.py  token.py  user.py
app/crud/: base.py  carts.py  categories.py  chats.py  messages.py  orders.py  products.py  static_info.py  users.py
app/services/: clear_unverified_users.py  create_admin.py  email.py  mailing.py
app/tasks/: __init__.py  email_notification.py
app/websocket/: chat.py  manager.py
